Bug fixed and enhance network whitelist to use an authentication
